--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.55.0",
     "@vercel/analytics": "^1.5.0",
     "next": "15.4.7",
     "react": "19.1.0",
